# treesitter-natural

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bindings/c/: tree-sitter-treesitter-natural.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_treesitter_natural/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreesitterNatural/: treesitter-natural.h
bindings/swift/TreeSitterTreesitterNaturalTests/: TreeSitterTreesitterNaturalTests.swift
src/: scanner.c
